# Data_Logger

./: CMakeLists.txt  Data_Logger.c  readme.md
Data_Analyser/: data_analyser.py  datalog_00.csv
libs/Bitdoglab_pico/: CMakeLists.txt  bitdoglab_pico.c  bitdoglab_pico.h
libs/FatFs_SPI/: CMakeLists.txt
libs/Mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
libs/Ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
